; ModuleID = '/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_fast-classifier.c_fast_classifier_device_event.c'
source_filename = "/home/carl/AnghaBench/lede/package/lean/shortcut-fe/src/extr_fast-classifier.c_fast_classifier_device_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }
%struct.net_device = type { i32 }

@NETDEV_DOWN = common dso_local global i64 0, align 8
@NOTIFY_DONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.notifier_block*, i64, i8*)* @fast_classifier_device_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fast_classifier_device_event(%struct.notifier_block* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.notifier_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.net_device*, align 8
  store %struct.notifier_block* %0, %struct.notifier_block** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = call %struct.net_device* @SFE_DEV_EVENT_PTR(i8* %8)
  store %struct.net_device* %9, %struct.net_device** %7, align 8
  %10 = load %struct.net_device*, %struct.net_device** %7, align 8
  %11 = icmp ne %struct.net_device* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %3
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @NETDEV_DOWN, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %12
  %17 = load %struct.net_device*, %struct.net_device** %7, align 8
  %18 = call i32 @sfe_ipv4_destroy_all_rules_for_dev(%struct.net_device* %17)
  %19 = load %struct.net_device*, %struct.net_device** %7, align 8
  %20 = call i32 @sfe_ipv6_destroy_all_rules_for_dev(%struct.net_device* %19)
  br label %21

21:                                               ; preds = %16, %12, %3
  %22 = load i32, i32* @NOTIFY_DONE, align 4
  ret i32 %22
}

declare dso_local %struct.net_device* @SFE_DEV_EVENT_PTR(i8*) #1

declare dso_local i32 @sfe_ipv4_destroy_all_rules_for_dev(%struct.net_device*) #1

declare dso_local i32 @sfe_ipv6_destroy_all_rules_for_dev(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
